bin/test/fixtures/public/fail/semantic/funcNotFound.jmm
/*  REASON:
    Variable assignments to literals must have the literal be the variable's type.
*/

class T {

    int a;
    Boolean b;
    public boolean foo(boolean a, int b){
        this.bar();
        return true;
    }

    public static void main(String[] a) {
        int i;
        boolean c;
        i=this.a;
        io.println(10);
        this.foo(true, 1);
    }

}
